💄 se arreglan estilos para safari y se agregan metas del sitio

--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,12 @@
   <title>Carito Da Silva</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta property="og:url" content="https://www.caritodasilva.work/" />
+  <meta property="og:type" content="portfolio" />
+  <meta property="og:title" content="CARITO DA SILVA - Full Stack Developer" />
+  <meta property="og:description" content="Portafolio con proyectos, CV y datos de contacto" />
+  <meta property="og:image"
+    content="https://firebasestorage.googleapis.com/v0/b/portafoliocaritodasilva.appspot.com/o/caritoLogo.png?alt=media&token=fd133c70-55ac-4597-ac1a-0f663f3515f8" />
   <link rel="icon" type="image/x-icon" href="./assets/images/rostro1.png">
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
